finalização do processo de recuperação de senha

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     {
       "name": "Fabio C. Botelho",
       "email": "fabiobotelho29@gmail.com",
-      "homepage": "",
+      "homepage": "https://google.com",
       "role": "Developer"
     }
   ],
